# kr-hearings-data

./: .gitignore  README.md  pyproject.toml
docs/: CODEBOOK.md  EXPANSION_ROADMAP.md  PIPELINE.md
kr_hearings_data/: __init__.py  _cli.py  _loader.py
validation/: build_v4.py  build_v5.py  build_v6.py  build_v7.py  build_v8.py  build_v9.py  deep_audit.py  deep_audit_report.json  enrich_with_vconfdetail.py  fix_and_rebuild.py  investigate_failures.py  report.json  report_v3.json  report_v5.json  report_v8.json  validate_dataset.py
